force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Abatement_Requirement__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Abatement_Requirement__c</fullName>
    <label>Abatement Requirement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>