force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Code__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Code__c</fullName>
    <label>Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2006 IPMC</fullName>
                <default>true</default>
                <label>2006 IPMC</label>
            </value>
            <value>
                <fullName>2006 IBC</fullName>
            </value>
            <value>
                <fullName>2006 IRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>