force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Code_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Code_Number__c</fullName>
    <defaultValue>"1-1.1"</defaultValue>
    <externalId>true</externalId>
    <label>Code Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>