force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Second_Reinspection__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Second_Reinspection__c</fullName>
    <label>Second Reinspection</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>