force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Section__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Section__c</fullName>
    <label>Section Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>