force-app/main/default/objects/MUSW__Violation_Type__c/fields/MUSW__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Short_Description__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>