force-app/main/default/objects/MUSW__Violation_Type__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Short_Description__c</columns>
    <columns>MUSW__Section__c</columns>
    <columns>MUSW__SectionDescription__c</columns>
    <columns>Days_to_correct__c</columns>
    <columns>MUSW__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>